feat(merger): added merger resource
